; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_valops.c_find_oload_champ_namespace.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_valops.c_find_oload_champ_namespace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.type = type { i32 }
%struct.symbol = type { i32 }
%struct.badness_vector = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.type**, i32, i8*, i8*, %struct.symbol***, %struct.badness_vector**)* @find_oload_champ_namespace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_oload_champ_namespace(%struct.type** %0, i32 %1, i8* %2, i8* %3, %struct.symbol*** %4, %struct.badness_vector** %5) #0 {
  %7 = alloca %struct.type**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.symbol***, align 8
  %12 = alloca %struct.badness_vector**, align 8
  %13 = alloca i32, align 4
  store %struct.type** %0, %struct.type*** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store %struct.symbol*** %4, %struct.symbol**** %11, align 8
  store %struct.badness_vector** %5, %struct.badness_vector*** %12, align 8
  %14 = load %struct.type**, %struct.type*** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i8*, i8** %9, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = load %struct.symbol***, %struct.symbol**** %11, align 8
  %19 = load %struct.badness_vector**, %struct.badness_vector*** %12, align 8
  %20 = call i32 @find_oload_champ_namespace_loop(%struct.type** %14, i32 %15, i8* %16, i8* %17, i32 0, %struct.symbol*** %18, %struct.badness_vector** %19, i32* %13)
  %21 = load i32, i32* %13, align 4
  ret i32 %21
}

declare dso_local i32 @find_oload_champ_namespace_loop(%struct.type**, i32, i8*, i8*, i32, %struct.symbol***, %struct.badness_vector**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
